# emacs-templates

./: .fixtures.yml.tmpl  .gitignore  .travis.yml  .travis.yml.tmpl  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.am.tmpl  Makefile.tmpl  NEWS  README  README.md  README.md.tmpl  Rakefile.tmpl  Vagrantfile.tmpl  acinclude.m4  configure.ac  configure.ac.tmpl  default-C.tmpl  default-bash.tmpl  default-c-block.tmpl  default-c.tmpl  default-cpp.tmpl  default-css.tmpl  default-dtd-block.tmpl  default-dtd.tmpl  default-el.tmpl  default-go.tmpl  default-h.tmpl  default-hh.tmpl  default-hm.tmpl  default-hpp.tmpl  default-ii.tmpl  default-java.tmpl  default-m.tmpl  default-php.tmpl  default-pl.tmpl  default-pm.tmpl  default-pp.tmpl  (+13 more)
CVSROOT/: config  modules
emacs-templates-1/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.am.tmpl  Makefile.tmpl  NEWS  README  acinclude.m4  configure.ac  default-C.tmpl  default-c-block.tmpl  default-dtd-block.tmpl  default-dtd.tmpl  default-el.tmpl  default-h.tmpl  default-hh.tmpl  default-ii.tmpl  default-java.tmpl  default-m.tmpl  default-php.tmpl  default-pl.tmpl  default-pm.tmpl  default-sql.tmpl  default-tmpl.tmpl  default-txt.tmpl  default-xml.tmpl  default-xsl.tmpl  find-up-dir.el  main.C.tmpl  template-insert-config.el  template-insert.el
tests/system/: Makefile.am  test-system.bash  test-template-insert-sys.el
tests/unit/: Makefile.am  test-find-up-dir.el  test-template-insert.el
