dnl
dnl File:	configure.in
dnl Project:	EmacsTemplates 
dnl Desc:
dnl
dnl   Process this file with autoconf to produce a configure script. 
dnl
dnl Notes:
dnl
dnl Author(s):   Paul Houghton <pahoughton@users.sourceforge.net>
dnl Created:     05/26/2003 10:09
dnl
dnl Revision History: (See ChangeLog for revision history)
dnl
dnl	$Author$
dnl	$Date$
dnl	$Name$
dnl	$Revision$
dnl	$State$
dnl
dnl $Id$
dnl

AC_PREREQ(2.57)
AC_INIT( emacs-templates,
	 1.01,
	 Paul Houghton <pahoughton@users.sourceforge.net> )

AM_INIT_AUTOMAKE

AC_ARG_VAR( EMACS, which emacs to use (xemacs,emacs) default is xemacs )

PAH_PROG_EMACS
PAH_PATH_LISPDIR

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT


